# ramen

./: .clang-format  .gitmodules  CMakeLists.txt  TODO.txt
ramen/: CMakeLists.txt  config.hpp  docs.hpp  main.cpp
ramen/Concepts/: ParamValueConcept.hpp  RegularConcept.hpp
ramen/GL/: Imath_gl.cpp  Imath_gl.hpp  gl.cpp  gl.hpp  glew.hpp  glu.cpp  glu.hpp  image_view_shaders.hpp  image_viewer_strategy.hpp  lut3d.cpp  lut3d.hpp  program.cpp  program.hpp
ramen/ImathExt/: ImathBoxAlgo.cpp  ImathBoxAlgo.h  ImathLineSegmentAlgo.h  ImathMatrixAlgo.h  ImathMatrixColorAlgo.cpp  ImathMatrixColorAlgo.h  ImathTypeTraits.hpp
ramen/algorithm/: clamp.hpp  for_each_position.hpp
ramen/anim/: any_curve.cpp  any_curve.hpp  clipboard.cpp  clipboard.hpp  curve.hpp  curve_algorithm.cpp  curve_algorithm.hpp  curve_fwd.hpp  curve_to_half_lut.cpp  curve_to_half_lut.hpp  float_curve.cpp  float_curve.hpp  float_key.cpp  float_key.hpp  fwd_diff_cubic_evaluator.hpp  keyframe.cpp  keyframe.hpp  keyframe_vector.hpp  shape_curve.hpp  shape_key.hpp  track.cpp  track.hpp  track_fwd.hpp  util.cpp  util.hpp
ramen/app/: application.cpp  application.hpp  application_fwd.hpp  command_line_parser.cpp  command_line_parser.hpp  command_line_parser_fwd.hpp  composition.cpp  composition.hpp  composition_fwd.hpp  document.cpp  document.hpp  document_fwd.hpp  preferences.cpp  preferences.hpp
ramen/bezier/: algorithm.cpp  algorithm.hpp  bernstein.hpp  curve.hpp  detail.hpp
ramen/color/: color3.hpp  color4.hpp
ramen/config/: compiler.hpp  os.hpp  visibility.hpp
ramen/container/: ptr_vector_util.hpp  unique_name_map.hpp
ramen/core/: copy_on_write.hpp  dictionary.cpp  dictionary.hpp  dictionary_fwd.hpp  empty.cpp  empty.hpp  exceptions.cpp  exceptions.hpp  memory.hpp  name.cpp  name.hpp  name_fwd.hpp  poly.hpp  poly_copyable.hpp  poly_fwd.hpp  poly_regular.hpp  simple_expression_evaluator.cpp  simple_expression_evaluator.hpp  string.cpp  string.hpp  string_fwd.hpp  types.cpp  types.hpp  variant.cpp  variant.hpp
ramen/depgraph/: dependency.cpp  dependency.hpp  dgraph.cpp  dgraph.hpp  dgraph_fwd.hpp  dnode.cpp  dnode.hpp  dnode_fwd.hpp  exceptions.cpp  exceptions.hpp
ramen/filesystem/: path.cpp  path.hpp  path_sequence.cpp  path_sequence.hpp
ramen/functional/: constants.hpp
ramen/ggems/: convex_opt.c  convex_opt.h  fitcurves.c  ggveclib.c  graphicsgems.h  nearestpoint.c  nearestpoint.h
ramen/half/: halfExpLog.h  halfExpLogTable.cpp  half_lut.hpp
ramen/hash/: MurmurHash3.cpp  MurmurHash3.h  generator.cpp  generator.hpp
ramen/image/: accumulator.cpp  accumulator.hpp  agg_renderers.cpp  agg_renderers.hpp  box_blur.cpp  box_blur.hpp  box_blur_mask.hpp  buffer.cpp  buffer.hpp  channel_range.cpp  channel_range.hpp  color.cpp  color.hpp  color_bars.cpp  color_bars.hpp  color_correct.hpp  denan.cpp  denan.hpp  dilate.cpp  dilate.hpp  filters.cpp  filters.hpp  format.cpp  format.hpp  gaussian_blur.cpp  gaussian_blur.hpp  init_image_processing.cpp  init_image_processing.hpp  invalid_pixels.cpp  invalid_pixels.hpp  mipmap_sampler.hpp  ocio_transform.cpp  ocio_transform.hpp  percentile_filter.cpp  percentile_filter.hpp  processing.cpp  processing.hpp  resize.cpp  resize.hpp  smart_blur.cpp  (+5 more)
ramen/imageio/: algorithm.hpp  enums.hpp  exceptions.cpp  exceptions.hpp  factory.cpp  factory.hpp  format.cpp  format.hpp  imageio_fwd.hpp  import_multichannel_exr.cpp  import_multichannel_exr.hpp  multichannel_reader.cpp  multichannel_reader.hpp  reader.cpp  reader.hpp  writer.hpp
ramen/manipulators/: circle_manipulator.cpp  circle_manipulator.hpp  draw.cpp  draw.hpp  manipulable.cpp  manipulable.hpp  manipulable_fwd.hpp  manipulator.cpp  manipulator.hpp  manipulator_fwd.hpp  pick.cpp  pick.hpp  point2_manipulator.cpp  point2_manipulator.hpp  quad_manipulator.cpp  quad_manipulator.hpp  transform2_manipulator.cpp  transform2_manipulator.hpp  util.cpp  util.hpp
ramen/math/: box2.hpp  box3.hpp  cmath.hpp  constants.hpp  fast_float.hpp  hpoint2.hpp  hpoint3.hpp  matrix33.hpp  matrix44.hpp  normal.hpp  point2.hpp  point3.hpp  vector2.hpp  vector3.hpp
ramen/memory/: image_cache.cpp  image_cache.hpp  lru_cache_interface.hpp  manager.cpp  manager.hpp  manager_fwd.hpp  pool.cpp  pool.hpp  pool_allocator.hpp
ramen/movieio/: exceptions.cpp  exceptions.hpp  factory.cpp  factory.hpp  format.cpp  format.hpp  image_seq_reader.cpp  image_seq_reader.hpp  image_seq_writer.cpp  image_seq_writer.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
ramen/nodes/: composite_node.cpp  composite_node.hpp  composition_node.cpp  composition_node.hpp  edge.cpp  edge.hpp  generator_node.cpp  graph_algorithm.cpp  graph_algorithm.hpp  graph_color.hpp  image_node.cpp  image_node.hpp  node.cpp  node.hpp  node_factory.cpp  node_factory.hpp  node_fwd.hpp  node_graph.cpp  node_graph.hpp  node_graph_fwd.hpp  node_graph_modifier.cpp  node_graph_modifier.hpp  node_graph_modifier_fwd.hpp  node_info.cpp  node_info.hpp  node_metaclass.cpp  node_metaclass.hpp  node_output_interface.cpp  node_output_interface.hpp  node_plug.cpp  node_plug.hpp  node_visitor.cpp  node_visitor.hpp  null_node.cpp  null_node.hpp  pointop_node.cpp  pointop_node.hpp  viewer_node.cpp  viewer_node.hpp  world_node.cpp  (+1 more)
ramen/noise/: global_noise.cpp  global_noise.hpp  noise_base.cpp  noise_base.hpp  perlin.cpp  perlin.hpp  permutation_array.cpp  permutation_array.hpp  simplex_noise.cpp  simplex_noise.hpp  simplex_noise_generator.cpp  simplex_noise_generator.hpp  turbulence.hpp  vector_noise_adaptor.hpp
ramen/ocio/: gl_display_manager.cpp  gl_display_manager.hpp  gl_lut3d.cpp  gl_lut3d.hpp  manager.cpp  manager.hpp  manager_fwd.hpp
ramen/params/: animated_param.cpp  animated_param.hpp  animated_param_command.cpp  animated_param_command.hpp  animated_param_command_fwd.hpp  animated_param_fwd.hpp  aspect_ratio_param.cpp  aspect_ratio_param.hpp  bool_param.cpp  bool_param.hpp  button_param.cpp  button_param.hpp  color_param.cpp  color_param.hpp  combo_group_param.cpp  combo_group_param.hpp  composite_param.cpp  composite_param.hpp  composite_parameterised.cpp  curve_param.cpp  (+58 more)
(+943 files in other folders)
